--- a/src/utils/app.scss
+++ b/src/utils/app.scss
@@ -1,11 +1,30 @@
 @import "../../theme/variables.css";
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 #content {
   height: 100%;
 }
 
 .app {
   height: 100%;
+}
+
+.no-touch {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #app-container {
@@ -19,7 +38,7 @@
 }
 
 .mobile-control {
-  position: absolute;
+  position: fixed;
   bottom: 40px;
   left: 0px;
   width: 100%;
@@ -31,13 +50,35 @@
     justify-content: space-between;
     align-items: center;
 
+    & > div {
+      position: relative;
+
+      .touch-hide {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 2;
+      }
+    }
+
+    .touch-left-right {
+      & > div {
+        display: inline-block;
+        position: relative;
+      }
+    }
+
     .jzc-button-m {
-      line-height: 0px;
-      padding: 25px;
-      color: #1a92ff;
-      background-color: rgba(255, 255, 255, 0.2);
+      width: 50px;
+      height: 50px;
+      color: #0a5693;
+      background-color: rgba(255, 255, 255, 0.1);
       margin: 0 10px;
       border-radius: 50%;
+      text-align: center;
+      line-height: 50px;
     }
   }
 }
@@ -105,7 +146,7 @@ body {
 
 .jzc-button {
   padding: 3px 6px;
-  background: #0e77ca;
+  background: #0a5693;
   color: #fff;
   border-radius: 3px;
   display: inline-block;
